2008-11-06: Jason Long <jlong@messiah.edu>
 * t/verifier.t: use a "fake" dns implementation, so that this test
   will pass no matter the user's state of dns

2008-11-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm (query): changed API so that it now returns
   a list of Net::DNS::RR objects, rather than a Net::DNS::Packet object.
 * lib/Mail/DKIM/Policy.pm: update for the change to the DNS.pm api.
 * lib/Mail/DKIM/PublicKey.pm: update for the change to the DNS.pm api.

2008-11-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm (encode_qp, decode_qp): suppress a warning
   about an uninitialized value
 * lib/Mail/DKIM/Common.pm (message_originator, message_sender): if a
   From/Sender line is present, but blank, still return a valid object
 * t/public_key.t: new test to check for DNS problems

2008-05-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm: when populating a DomainKey
   signature's identity, record where the identity came from
 * lib/Mail/DKIM/DkSignature.pm (identity_source): make the source of
   the identity (i.e. sender header or from header) available as a
   method

2008-05-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm (identity): do quoted-printable encoding/
   decoding for the i= tag (issue #1839015)
 * t/corpus/good_qp_1.txt, good_qp_2.txt, good_qp_3.txt: three test
   files for identities using quoted-printable encoding

2008-04-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: documentation for get_tag()

2008-04-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): do case-sensitive
   comparison (issue #1938112)

2008-04-14: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_12.txt: fix g= case-sensitivity test so it won't give
   false positives on dkim-milter
 * t/corpus/badkey_13.txt: test that the verifier checks granularity
   against i= tag, not the From header

2008-04-14: Jason Long <jlong@messiah.edu>